--- a/pub/css/styles.css
+++ b/pub/css/styles.css
@@ -16,8 +16,8 @@
         }
         
         .silex-id-1474394621033-3 {
-            top: 5px;
-            left: 0px;
+            top: 140px;
+            left: 5px;
         }
         
         .silex-id-1474394621032-2 {
@@ -32,6 +32,45 @@
             min-height: 175px;
             top: 31px;
             left: 98px;
+        }
+        
+        .silex-id-1514629390370-0 {
+            width: 314px;
+            background-color: rgb(255, 255, 255);
+            min-height: 198px;
+            top: 55px;
+            left: 546px;
+        }
+        
+        .silex-id-1514646601737-1 {
+            width: 427px;
+            background-color: rgb(255, 255, 255);
+            min-height: 145px;
+            top: 309px;
+            left: 98px;
+        }
+        
+        .silex-id-1514691503857-0 {
+            width: 475px;
+            background-color: rgb(255, 255, 255);
+            min-height: 234px;
+            top: 281px;
+            left: 650px;
+        }
+        
+        .silex-id-1514943626252-0 {
+            width: 100px;
+            min-height: 100px;
+            top: 251px;
+            left: 501px;
+        }
+        
+        .silex-id-1514944451578-0 {
+            width: 365px;
+            background-color: rgb(255, 255, 255);
+            min-height: 100px;
+            top: 68px;
+            left: 287px;
         }
         
         .silex-id-1478366450713-3 {
@@ -50,6 +89,6 @@
             min-height: 53px;
             width: 349px;
             top: 29px;
-            left: 430px;
+            left: 144px;
         }
     
